--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:prod": "nuxt generate && cp -R .output ./pocketbase && go build -o pocketnuxt pocketbase/main.go"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.6.5",
     "concurrently": "^7.4.0",
     "nuxt": "3.0.0",
     "primeflex": "3.2.1",
