--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ pocketbase/.output
 node_modules
 # pocketbase data
 pb_data
+pb_migrations
 # pocketnuxt binary
 pocketnuxt
+# import directory
+import
