--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "dev:nuxt": "nuxt dev",
     "dev:pocketbase": "go run pocketbase/main.go serve",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "build:prod": "nuxt generate && cp -R .output ./pocketbase && go build -o pocketnuxt pocketbase/main.go"
+    "postinstall": "nuxt prepare && husky install",
+    "build:prod": "nuxt generate && cp -R .output ./pocketbase && go build -o pocketnuxt pocketbase/main.go",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "**/*.{js,vue}": "eslint --ext .vue,.js --fix"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.6.5",
     "concurrently": "^7.4.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
+    "husky": "^8.0.3",
     "nuxt": "3.0.0",
-    "primeflex": "3.2.1",
+    "primeflex": "^3.3.0",
     "primeicons": "5.0.0",
     "primevue": "3.17.0"
   },
