--- a/package.json
+++ b/package.json
@@ -8,21 +8,27 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare && husky install",
     "build:prod": "nuxt generate && cp -R .output ./pocketbase && go build -o pocketnuxt pocketbase/main.go",
-    "lint-staged": "lint-staged"
-  },
-  "lint-staged": {
-    "**/*.{js,vue}": "eslint --ext .vue,.js --fix"
+    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lint:prettier": "prettier --check .",
+    "lint": "yarn lint:js && yarn lint:prettier",
+    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.6.5",
+    "@typescript-eslint/parser": "^5.59.0",
     "concurrently": "^7.4.0",
     "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
     "nuxt": "3.0.0",
+    "prettier": "^2.8.8",
     "primeflex": "^3.3.0",
     "primeicons": "5.0.0",
-    "primevue": "3.17.0"
+    "primevue": "3.17.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "pocketbase": "^0.9.1"
