--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.6.5",
-    "@typescript-eslint/parser": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.1",
     "concurrently": "^7.4.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
@@ -31,6 +31,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "chart.js": "^4.2.1",
     "pocketbase": "^0.9.1"
   }
 }
