--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prettier": "^2.8.8",
     "primeflex": "^3.3.0",
     "primeicons": "5.0.0",
-    "primevue": "3.17.0",
+    "primevue": "^3.28.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
