--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.6.5",
     "@typescript-eslint/parser": "^5.59.1",
-    "concurrently": "^7.4.0",
+    "concurrently": "^8.0.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -26,7 +26,7 @@
     "nuxt": "3.0.0",
     "prettier": "^2.8.8",
     "primeflex": "^3.3.0",
-    "primeicons": "5.0.0",
+    "primeicons": "^6.0.1",
     "primevue": "^3.28.0",
     "typescript": "^5.0.4"
   },
