--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
-    "nuxt": "3.0.0",
+    "nuxt": "^3.4.3",
     "prettier": "^2.8.8",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
