--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "yarn generate && concurrently 'yarn:dev:*'",
+    "dev": "yarn generate && (yarn dev:nuxt & yarn dev:pocketbase)",
     "generate": "nuxt generate && cp -R .output ./pocketbase",
     "dev:nuxt": "nuxt dev",
     "dev:pocketbase": "go run pocketbase/main.go serve",
@@ -18,7 +18,6 @@
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.6.5",
     "@typescript-eslint/parser": "^5.59.1",
-    "concurrently": "^8.0.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -26,7 +25,7 @@
     "husky": "^8.0.3",
     "nuxt": "^3.4.3",
     "nuxt-security": "^0.13.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.28.0",
