Add some wrestlers, add type for places, add nuxt-icon module

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
     "nuxt": "^3.4.3",
+    "nuxt-icon": "^0.4.2",
     "nuxt-security": "^0.13.0",
     "prettier": "^3.0.0",
     "primeflex": "^3.3.0",
