--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev:nuxt": "nuxt dev",
     "dev:pocketbase": "go run pocketbase/main.go serve",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare && husky install",
+    "postinstall": "nuxt prepare && husky",
     "build:prod": "nuxt generate && cp -R .output ./pocketbase && go build -o pocketnuxt pocketbase/main.go",
     "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
@@ -14,22 +14,25 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.7.1",
+    "@nuxt/devtools": "^1.0.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.6.5",
-    "@typescript-eslint/parser": "^6.2.0",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.11.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.0",
     "nuxt": "^3.4.3",
-    "nuxt-icon": "^0.4.2",
-    "nuxt-security": "^0.14.0",
+    "nuxt-icon": "^0.6.0",
+    "nuxt-security": "^1.0.0",
     "prettier": "^3.0.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
-    "primevue": "^3.28.0",
+    "primevue": "3.34.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
@@ -37,6 +40,7 @@
     "chart.js": "^4.2.1",
     "chartjs-chart-geo": "^4.2.4",
     "chartjs-plugin-datalabels": "^2.2.0",
-    "pocketbase": "^0.15.0"
-  }
+    "pocketbase": "0.20.3"
+  },
+  "packageManager": "yarn@4.1.0"
 }
