--- a/package.json
+++ b/package.json
@@ -8,31 +8,31 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare && husky",
     "build:prod": "nuxt generate && cp -R .output ./pocketbase && go build -o pocketnuxt pocketbase/main.go",
-    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lint:js": "eslint .",
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.3",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxt/eslint": "^0.3.13",
     "@nuxtjs/seo": "^2.0.0-rc.10",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.26.0",
     "husky": "^9.0.11",
-    "nuxt": "^3.4.3",
+    "nuxt": "^3.11.2",
     "nuxt-icon": "^0.6.10",
-    "nuxt-security": "^1.4.3",
+    "nuxt-security": "^2.0.0-rc.6",
     "prettier": "^3.3.1",
     "primeflex": "^3.3.1",
-    "primeicons": "^6.0.1",
+    "primeicons": "^7.0.0",
     "primevue": "3.34.1",
     "typescript": "^5.4.5"
   },
@@ -42,6 +42,9 @@
     "chartjs-chart-geo": "^4.3.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "pocketbase": "0.20.3"
+  },
+  "resolutions": {
+    "ufo": "1.5.3"
   },
   "packageManager": "yarn@4.1.0"
 }
