--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare && husky",
     "build:prod": "nuxt generate && cp -R .output ./pocketbase && go build -o pocketnuxt pocketbase/main.go",
-    "lint:js": "eslint .",
+    "lint:js": "eslint . --ignore-pattern pb_migrations/",
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
@@ -20,17 +20,16 @@
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
-    "eslint": "^9.4.0",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.26.0",
     "husky": "^9.0.11",
-    "nuxt": "^3.11.2",
+    "nuxt": "^3.12.2",
     "nuxt-icon": "^0.6.10",
     "nuxt-security": "^2.0.0-rc.6",
-    "prettier": "^3.3.1",
+    "prettier": "^3.3.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "3.34.1",
