--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.3.6",
+    "@nuxt/devtools": "^1.3.9",
     "@nuxt/eslint": "^0.3.13",
+    "@nuxt/icon": "^1.0.0",
     "@nuxtjs/fontaine": "^0.4.3",
     "@nuxtjs/seo": "^2.0.0-rc.11",
     "@nuxtjs/tailwindcss": "^6.12.0",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "@vite-pwa/nuxt": "^0.8.1",
-    "eslint": "^9.5.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "@vite-pwa/nuxt": "^0.9.0",
+    "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
-    "nuxt": "^3.12.2",
-    "nuxt-icon": "^0.6.10",
-    "nuxt-security": "^2.0.0-rc.7",
+    "nuxt": "^3.12.3",
+    "nuxt-security": "^2.0.0-rc.9",
     "prettier": "^3.3.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primevue": "3.52.0",
-    "typescript": "^5.5.2"
+    "primevue": "3.53.0",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
     "@types/geojson": "^7946.0.14",
