--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.4",
     "nuxt": "^3.12.4",
+    "nuxt-primevue": "^3.0.0",
     "nuxt-security": "^2.0.0-rc.9",
     "prettier": "^3.3.3",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primevue": "3.53.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
