chore: update packages

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "yarn generate && (yarn dev:nuxt & yarn dev:pocketbase)",
     "generate": "nuxt generate && cp -R .output ./pocketbase",
     "dev:nuxt": "nuxt dev",
-    "dev:pocketbase": "go run pocketbase/main.go serve",
+    "dev:pocketbase": "go run pocketbase/main.go serve --encryptionEnv=PB_ENCRYPTION_KEY",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare && husky",
     "build:prod": "nuxt generate && cp -R .output ./pocketbase && go build -o pocketnuxt pocketbase/main.go",
@@ -14,36 +14,36 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.3.9",
-    "@nuxt/eslint": "^0.4.0",
-    "@nuxt/icon": "^1.4.5",
-    "@nuxtjs/fontaine": "^0.4.3",
-    "@nuxtjs/seo": "^2.0.0-rc.18",
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
-    "@vite-pwa/nuxt": "^0.9.1",
-    "eslint": "^9.9.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.4",
-    "nuxt": "^3.12.4",
+    "@nuxt/devtools": "^2.5.0",
+    "@nuxt/eslint": "^1.4.1",
+    "@nuxt/icon": "^1.14.0",
+    "@nuxtjs/fontaine": "^0.5.0",
+    "@nuxtjs/seo": "^3.0.3",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "@vite-pwa/nuxt": "^1.0.4",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.3",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.0",
+    "husky": "^9.1.7",
+    "nuxt": "^3.17.5",
     "nuxt-primevue": "^3.0.0",
-    "nuxt-security": "^2.0.0-rc.9",
-    "prettier": "^3.3.3",
+    "nuxt-security": "^2.2.0",
+    "prettier": "^3.6.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@primevue/themes": "^4.0.4",
-    "@types/geojson": "^7946.0.14",
-    "chart.js": "^4.4.3",
-    "chartjs-chart-geo": "^4.3.1",
+    "@primevue/themes": "^4.3.5",
+    "@types/geojson": "^7946.0.16",
+    "chart.js": "^4.5.0",
+    "chartjs-chart-geo": "^4.3.4",
     "chartjs-plugin-datalabels": "^2.2.0",
-    "pocketbase": "0.21.4"
+    "pocketbase": "0.26.1"
   },
   "resolutions": {
     "ufo": "1.5.3"
